--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@huggingface/inference": "^2.6.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.5",
+    "crypto-browserify": "^3.12.0",
+    "dns": "^0.2.2",
+    "firebase": "^10.7.1",
+    "mongodb": "4.1",
+    "mongoose": "^8.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
