--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "crypto-browserify": "^3.12.0",
     "dns": "^0.2.2",
     "firebase": "^10.7.1",
+    "fs": "^0.0.1-security",
     "mongodb": "4.1",
     "mongoose": "^8.0.4",
     "react": "^18.2.0",
